# Atlas

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  idea.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
compat/raycast/: README.md  corpus.lock.json  matrix.json
crates/atlas-ai/: Cargo.toml
crates/atlas-ai/src/: cli.rs  client.rs  commands.rs  export.rs  lib.rs  models.rs  sse.rs  storage.rs
crates/atlas-core/: Cargo.toml
crates/atlas-core/src/: calculator.rs  features.rs  focus.rs  lib.rs  notes.rs  search.rs  transfer.rs
crates/atlas-core/src/capture/: engine.rs
crates/atlas-core/src/monitor/: battery.rs  collector.rs  disk.rs  mod.rs  models.rs  sensors.rs
crates/atlas-ffi/: Cargo.toml
crates/atlas-ffi/src/: atlas.udl  lib.rs
crates/atlas-module-loader/: Cargo.toml
crates/atlas-module-loader/src/: lib.rs
crates/atlas-module-sdk/: Cargo.toml
crates/atlas-module-sdk/src/: lib.rs
crates/atlas-plugin-builder/: Cargo.toml
crates/atlas-plugin-builder/src/: bundle.rs  capabilities.rs  dependencies.rs  lib.rs  manifest.rs  migrate.rs  package.rs  report.rs  source.rs
crates/atlas-plugin-builder/tests/: analysis.rs  build.rs  corpus.rs  manifest.rs  migrate.rs
crates/atlas-plugin-host/: Cargo.toml
crates/atlas-plugin-host/src/: broker.rs  capabilities.rs  developer_mode.rs  diagnostics.rs  dist.rs  hub.rs  lib.rs  limits.rs  lua.rs  manifest.rs  mcp.rs  mcp_transport.rs  package_manager.rs  registry.rs  runner_client.rs  runtime.rs  storage.rs  supervisor.rs  ui.rs  wasm_host.rs
crates/atlas-plugin-host/tests/: capability_broker.rs  diagnostics.rs  malicious_plugins.rs  package_lifecycle.rs  storage_isolation.rs  supervisor.rs
crates/atlas-plugin-js/: Cargo.toml
crates/atlas-plugin-js/src/: lib.rs
crates/atlas-plugin-package/: Cargo.toml
crates/atlas-plugin-package/fuzz/: Cargo.toml
crates/atlas-plugin-package/fuzz/fuzz_targets/: archive.rs
crates/atlas-plugin-package/src/: archive.rs  integrity.rs  lib.rs  trust.rs
crates/atlas-plugin-package/tests/: malicious_archives.rs
crates/atlas-plugin-protocol/: Cargo.toml
crates/atlas-plugin-protocol/fuzz/: Cargo.toml
crates/atlas-plugin-protocol/fuzz/fuzz_targets/: frame.rs
crates/atlas-plugin-protocol/src/: lib.rs
crates/atlas-plugin-protocol/tests/: framing.rs
crates/atlas-plugin-runner/: Cargo.toml
crates/atlas-plugin-runner/src/: connection.rs  identity.rs  lib.rs  main.rs
crates/atlas-plugin-runner/src/runtime/: javascript.rs  mcp.rs  mod.rs  wasm.rs
crates/atlas-plugin-runner/tests/: handshake.rs  react_plugin.rs  runtime_fixtures.rs  supervised_runtime.rs
crates/atlas-ui-schema/: Cargo.toml
crates/atlas-ui-schema/fuzz/: Cargo.toml
crates/atlas-ui-schema/fuzz/fuzz_targets/: patch.rs
crates/atlas-ui-schema/src/: lib.rs  validate.rs
crates/atlas-ui-schema/tests/: session_validation.rs
docs/: BUILDING.md  NOTICES.md  PLUGIN_DEVELOPMENT.md  PRIVACY.md  RAYCAST_COMPATIBILITY.md  RELEASING.md  atlas-claude-design-prompts.md  atlas-figma-ui-prompt-bilingual.md  design-prompts.md
docs/branding/atlas-logo-concepts/: README.md
docs/superpowers/plans/: 2026-05-09-atlas-scaffolding.md  2026-05-09-enhanced-monitoring.md  2026-05-09-screenshot-capture.md  2026-05-09-system-monitoring.md  2026-05-10-screenshot-pro-capture.md  2026-05-10-uniffi-real-capture.md  2026-05-11-feature-center-v1.md  2026-05-11-monitoring-v2-port-master.md  2026-05-11-screenshot-capture-modes-v2.md  2026-05-11-screenshot-selection-precision-v1.md  2026-05-20-translation-engine-v1.md  2026-05-20-translation-settings-v1.md  2026-05-21-command-palette-developer-tools-v1.md  2026-05-21-command-palette-shell-v1.md  2026-05-21-screenshot-annotation-style-v1.md  2026-05-21-screenshot-annotation-text-v1.md  2026-05-21-screenshot-drag-output-v1.md  2026-05-21-screenshot-feature-controls-v1.md  2026-05-21-screenshot-library-v1.md  2026-05-21-screenshot-quick-output-feedback-v1.md  2026-05-22-ai-skills-v1.md  2026-05-22-atlas-all-features-roadmap.md  2026-05-22-clipboard-history-v1.md  2026-05-22-command-palette-app-rescan-v1.md  2026-05-22-command-palette-custom-automation-v1.md  2026-05-22-command-palette-frecency-v1.md  2026-05-22-command-palette-snippets-v1.md  2026-05-22-command-palette-window-management-v1.md  2026-05-22-gif-recording-v1.md  2026-05-22-local-ai-load-monitor-v1.md  2026-05-22-packaging-and-editions-v1.md  2026-05-22-privacy-pulse-v1.md  2026-05-22-scratchpad-v1.md  2026-05-22-scrolling-capture-v1.md  2026-05-22-system-utilities-v1.md  2026-05-22-tokenbar-v1.md  2026-05-22-window-grid-v1.md  2026-05-22-workspaces-v1.md  2026-07-22-launcher-search-upgrade.md  2026-07-22-main-shell-tabs-and-ai.md  (+6 more)
docs/superpowers/specs/: 2026-05-09-atlas-design.md  2026-05-09-screenshot-ocr-translation-design.md  2026-05-09-system-monitoring-design.md  2026-05-21-command-palette-design.md  2026-05-23-atlas-logo-design.md  2026-05-23-scene-system-and-tool-pack-design.md  2026-05-24-atlas-roadmap.md  2026-05-24-calculator-provider-design.md  2026-05-24-dynamic-module-loader-design.md  2026-05-24-plugin-system-design.md  2026-06-17-app-shell-navigation-settings-design.md  2026-06-17-modular-distribution-unified.md  2026-07-20-js-plugin-track-and-cross-platform-ui.md  2026-07-21-screenshot-suite-parity-design.md  2026-07-22-launcher-search-upgrade-design.md  2026-07-22-main-shell-tabs-and-ai-design.md  2026-07-22-menu-panel-mactools-design.md  (+5 more)
plugins/ai-web-hub/: README.md  package.json
scripts/: ExportOptions-Store.plist  audit_dependencies.sh  build_release.sh  build_uniffi_static.sh  fetch_raycast_corpus.sh  generate_uniffi_swift.sh  import_signing_certificate.sh  notarize_release.sh  test_plugin_soak.sh  test_raycast_compat.sh
tools/atlas-plugin/: Cargo.toml
tools/atlas-plugin/src/: main.rs
tools/atlas-plugin/src/commands/: build.rs  inspect.rs  migrate.rs  mod.rs  test.rs
tools/atlas-plugin/tests/: cli.rs
tools/esbuild/: checksums.json
tools/uniffi-swift-bindgen/: Cargo.toml
(+5 files in other folders)
