[package]
name = "atlas-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1.36", features = ["rt", "macros", "time", "process", "io-util"] }
tokio-util = "0.7"
futures-util = "0.3"
