[package]
name = "atlas-core"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.30"
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
screenshots = "0.8"
image = "0.24"
uuid = { version = "1.7", features = ["v4"] }
battery = "0.7"
evalexpr = "11"
