[package]
name = "atlas-ffi"
version = "0.1.0"
edition = "2021"

[dependencies]
atlas-core = { path = "../atlas-core" }
uniffi = { version = "0.28", features = ["cli"] }
once_cell = "1.19"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[lib]
crate-type = ["staticlib", "cdylib"]
