[package]
name = "atlas-ffi"
version = "0.1.0"
edition = "2021"

[features]
default = ["executable-plugins", "dynamic-modules"]
executable-plugins = ["dep:atlas-plugin-host"]
dynamic-modules = ["atlas-core/dynamic-modules"]

[dependencies]
atlas-core = { path = "../atlas-core", default-features = false }
atlas-plugin-host = { path = "../atlas-plugin-host", optional = true }
uniffi = { version = "0.30", features = ["cli"] }
once_cell = "1.19"
tokio = { version = "1.36", features = ["full"] }
thiserror = "2.0.18"

[build-dependencies]
uniffi = { version = "0.30", features = ["build"] }

[lib]
crate-type = ["staticlib", "cdylib"]
