[package]
name = "atlas-ffi"
version = "0.1.0"
edition = "2021"

[features]
default = ["executable-plugins", "dynamic-modules"]
executable-plugins = [
    "dep:atlas-plugin-builder",
    "dep:atlas-plugin-host",
    "dep:atlas-plugin-package",
    "dep:atlas-plugin-protocol",
    "dep:atlas-ui-schema",
]
dynamic-modules = ["atlas-core/dynamic-modules"]

[dependencies]
atlas-ai = { path = "../atlas-ai" }
atlas-core = { path = "../atlas-core", default-features = false }
tokio-util = "0.7"
atlas-plugin-host = { path = "../atlas-plugin-host", optional = true }
atlas-plugin-builder = { path = "../atlas-plugin-builder", optional = true }
atlas-plugin-package = { path = "../atlas-plugin-package", optional = true }
atlas-plugin-protocol = { path = "../atlas-plugin-protocol", optional = true }
atlas-ui-schema = { path = "../atlas-ui-schema", optional = true }
uniffi = { version = "0.30", features = ["cli"] }
once_cell = "1.19"
tokio = { version = "1.36", features = ["full"] }
thiserror = "2.0.18"
getrandom = "0.3"
serde_json = "1"

[build-dependencies]
uniffi = { version = "0.30", features = ["build"] }

[dev-dependencies]
tempfile = "3"
toml = "0.8"
zip = { version = "2", default-features = false, features = ["deflate"] }

[lib]
crate-type = ["staticlib", "cdylib"]
