[package]
name = "atlas-plugin-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
atlas-plugin-package = { path = "../atlas-plugin-package" }
oxc_allocator = "0.141"
oxc_ast = "0.141"
oxc_ast_visit = "0.141"
oxc_parser = "0.141"
oxc_semantic = "0.141"
oxc_span = "0.141"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
toml = "0.8"
url = "2"
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
