[package]
name = "atlas-plugin-host"
version = "0.1.0"
edition = "2021"
description = "Host runtime for Atlas plugins (WASM Track A + MCP Track B): manifest parsing, capability gating, and registry."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"
sha2 = "0.10"
mlua = { version = "0.9", features = ["lua54", "vendored"] }
wasmtime = { version = "26", default-features = false, features = ["cranelift", "runtime", "gc"] }

[dev-dependencies]
wat = "1"
