[package]
name = "atlas-plugin-package"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
ed25519-dalek = "2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
toml = "0.8"
unicode-normalization = "0.1"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
