[package]
name = "atlas-plugin-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
atlas-plugin-host = { path = "../atlas-plugin-host" }
atlas-plugin-js = { path = "../atlas-plugin-js" }
atlas-plugin-package = { path = "../atlas-plugin-package" }
atlas-plugin-protocol = { path = "../atlas-plugin-protocol" }
atlas-ui-schema = { path = "../atlas-ui-schema" }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"

[dev-dependencies]
hex = "0.4"
tempfile = "3"
wat = "1"
toml = "0.8"
zip = { version = "2", default-features = false, features = ["deflate"] }
