[package]
name = "atlas-plugin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "atlas-plugin"
path = "src/main.rs"

[dependencies]
atlas-plugin-builder = { path = "../../crates/atlas-plugin-builder" }
atlas-plugin-package = { path = "../../crates/atlas-plugin-package" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
