[package]
name = "atlas-plugin-package-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
atlas-plugin-package = { path = ".." }
libfuzzer-sys = "0.4"

[[bin]]
name = "archive"
path = "fuzz_targets/archive.rs"
test = false
doc = false
bench = false

[workspace]
